<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity6">

    <Button
        android:id="@+id/routineSpeichern"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/routineSpeichern"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heimkino" />

    <Switch
        android:id="@+id/hauptschlafzimmer"
        android:layout_width="261dp"
        android:layout_height="50dp"
        android:text="@string/raumHauptschlafzimmer"
        app:layout_constraintBottom_toTopOf="@+id/studio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/studio"
        android:layout_width="261dp"
        android:layout_height="50dp"
        android:text="@string/raumStudio"
        app:layout_constraintBottom_toTopOf="@+id/terrasse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/terrasse"
        android:layout_width="261dp"
        android:layout_height="50dp"
        android:text="@string/raumTerrasse"
        app:layout_constraintBottom_toTopOf="@+id/garderobe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/garderobe"
        android:layout_width="261dp"
        android:layout_height="50dp"
        android:text="@string/raumGarderobe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/heimkino"
        android:layout_width="261dp"
        android:layout_height="50dp"
        android:text="@string/raumHeimkino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/garderobe" />

    <Button
        android:id="@+id/routineAusfuehren"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/routineAusfuehren"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routineSpeichern" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_home_24" />

</androidx.constraintlayout.widget.ConstraintLayout>